# Diaa

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ai-agent-company-starter/: .env.example  Dockerfile  README.md  cloudrun.yaml  docker-compose.yml  requirements.txt
ai-agent-company-starter/.github/workflows/: ci.yml
ai-agent-company-starter/agents/: manifest.json
ai-agent-company-starter/agents/phase1/: ai-opportunity-discovery.md  business-case-value-modeling.md  business-context-research.md  client-intake-qualification.md  enterprise-orchestrator.md  executive-reporting-narrative.md  governance-risk.md  knowledge-management-asset-reuse.md  market-intelligence-pilot-conversion.md  prioritization-scoring.md  (+3 more)
ai-agent-company-starter/app/: config.py  loader.py  main.py  models.py
ai-agent-company-starter/docs/: deployment-notes.md  global-operating-rules.md  release-report-dev.md
ai-agent-company-starter/scripts/: gcloud_first_deploy.sh  local_run.sh  setup_github_wif.sh
ai_solutions_agency/: api.py  api.py.bak  policies.py  prompts.py  state.py  workflow.py
ai_solutions_agency/agents/: __init__.py  solution_architect.py
ai_solutions_agency_os-2/: langgraph.json  main.py  requirements.txt
ai_solutions_agency_os-2/ai_solutions_agency/: __init__.py  config.py  llm.py  merge_policy.py  schemas.py
docs/: strategic_radar_backend_blueprint.md
examples/: sample_deal.json
strategic_radar_backend_package/: README.md
strategic_radar_backend_package/openapi/: openapi.yaml
(+38 files in other folders)
