[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-solutions-agency-os"
version = "0.1.0"
description = "Starter multi-agent AI solutions company orchestrated with LangGraph"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "openai>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["ai_solutions_agency*"]
